# openCVNDKApp

./: README.md  settings.gradle
app/: build.gradle
app/libs/OpenCV-android-sdk/sdk/: build.gradle
app/src/androidTest/java/com/raeanandres/opencvndkapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/raeanandres/opencvndkapp/: CameraActivity.kt  CameraFaceDetectionActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_camera_face_detection.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/raeanandres/opencvndkapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
